[package]
name = "serial"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.1"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }


[lib]
crate-type = ["cdylib"]
